--- a/device/src/main/res/menu/menu_share.xml
+++ b/device/src/main/res/menu/menu_share.xml
@@ -4,8 +4,5 @@
 
     <item
         android:id="@+id/action_share"
-        android:checkable="false"
-        android:enabled="false"
-        android:title="@string/action_share"
-        android:visible="false" />
+        android:title="@string/action_share" />
 </menu>
